# StVKSimulator

./: .gitignore  CMakeLists.txt  README.md
Data/dino/: simu_full.ini  simu_full_static.ini
Data/dino/model/: mesh.elastic
SRC/: CMakeLists.txt
SRC/Common/: CMakeLists.txt
SRC/ElasticModel/: CMakeLists.txt  FullSimulator.cpp  FullStVKSimulator.h
SRC/Math/: CMakeLists.txt
TestCase/: CMakeLists.txt
TestCase/HelloDino/: CMakeLists.txt  main.cpp
