PROJECT(SolidStVKSimulator)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Bin)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Lib)

SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O3")

INCLUDE_DIRECTORIES(

  /usr/include
  /usr/local/include
  /usr/local/include/eigen3

  ${PROJECT_SOURCE_DIR}/SRC/Common
  ${PROJECT_SOURCE_DIR}/SRC/ElasticModel
  ${PROJECT_SOURCE_DIR}/SRC/Math
  )

LINK_DIRECTORIES(
  
  /usr/lib 
  /usr/local/lib
  /usr/lib/x86_64-linux-gnu

  ${PROJECT_SOURCE_DIR}/Lib
  )

# print log informations
ADD_DEFINITIONS(-DLOG_INFO)
ADD_DEFINITIONS(-DLOG_ERROR)
ADD_DEFINITIONS(-DLOG_WARN)
ADD_DEFINITIONS(-DLOG_TRACE)
ADD_DEFINITIONS(-DLOG_DEBUG)

# projects
ADD_SUBDIRECTORY(SRC)
ADD_SUBDIRECTORY(TestCase)